# CS2200

Project1/: LC3-2200a.circ  microcode.ods  microcode.xlsx  ~$microcode.xlsx
Project1/assembly/: README.md  README.txt  bitcount.hex  bitcount.s  bitcount.sym  lc32200a-sim.py  misctest.hex  misctest.s  misctest.sym  test.hex  test.s
Project1/submission/: LC3-2200a.circ  microcode.xlsx
Project2/: Roy_Nishant.circ  lastname_firstname.circ
Project2/assembly/: README.txt  lc32200b.py
Project2/submission/: Roy_Nishant.circ
Project3/: CMakeLists.txt  Makefile  cachesim.c  cachesim.h  cachesim_driver.c  run_script.sh  text
prj4-submit/: Makefile
prj4-submit/simulator-src/: reverselookup.c  stats.h  tlb.h
prj4-submit/student-src/: compute_stats.c  page_lookup.c  tlb_lookup.c
project4/: CMakeLists.txt  README.md
project4 2/: CMakeLists.txt  run_script.sh
project4 2/simulator-src/: main.c  pagetable.c  pagetable.h  reverselookup.h  util.c
project4 2/student-src/: address_split.c  page_fault.c
project4/simulator-src/: global.c  global.h  main.c  process.c  process.h  tlb.c  util.h
project4/student-src/: address_split.c  compute_stats.c  page_fault.c  page_lookup.c  tlb_lookup.c
